# substrate-state-visualizer

./: Cargo.toml  README.md  package-lock.json
html/: data.js  index.html  index.js  package-lock.json  package.json  trie.js
src/: lib.rs
